# openzt

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DETOUR_TESTING.md  DETOUR_TESTING_README.md  Dockerfile  PATCH_SCHEMA.md  README.md  build.bat  build_test_dll.sh  extra-test-instance.bat  generate_detour_list.sh  open-docs.bat  openzt.bat  rippling-riding-rabbit.md  run-release.bat  run-test-release.bat  run-test-rpc-release.bat  run-test-rpc-via-loader-release.bat  run-test-rpc-wine.sh  run-test-wine.sh  run-test.bat  run-tests.bat  run-via-loader-pause.bat  run-via-loader-release.bat  run-via-loader.bat  run-via-wine.sh  run.bat  rust-toolchain.toml  rustfmt.toml  test_detours.sh
.claude/: settings.local.json
.github/: pull_request_template.md
field_accessor_as_string/: Cargo.toml
field_accessor_as_string/tests/: test.rs
field_accessor_as_string_trait/: Cargo.toml
field_accessor_as_string_trait/src/: lib.rs
libs/field_accessor_as_string/: Cargo.toml
libs/field_accessor_as_string/src/: lib.rs
libs/field_accessor_as_string/tests/: test.rs
libs/mlua_userdata/: .gitignore  Cargo.toml
libs/mlua_userdata/src/: lib.rs
openzt/: .gitignore  Cargo.toml  build.rs
openzt-configparser/: Cargo.toml  README.md
openzt-configparser/src/: ini.rs  lib.rs
openzt-configparser/tests/: test.rs  test_duplicate_key.ini  test_duplicate_key_more.ini
openzt-console/: Cargo.toml
openzt-console/src/: main.rs
openzt-detour/: Cargo.toml
openzt-detour-macro/: Cargo.toml
openzt-detour-macro/examples/: example.rs
openzt-detour-macro/src/: lib.rs
openzt-detour/src/: gen.rs  lib.rs  test.rs  test_integration_example.rs
openzt-dll/: Cargo.toml
openzt-dll/src/: lib.rs
openzt-loader/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
openzt-loader/src/: main.rs
openzt-store-macro/: Cargo.toml  README.md
openzt-store-macro/examples/: usage.rs
openzt-store-macro/src/: lib.rs
openzt-test-dll/: Cargo.toml
openzt-test-dll/src/: lib.rs
openzt-test-rpc/: Cargo.toml
openzt-test-rpc-dll/: Cargo.toml
openzt-test-rpc-dll/src/: lib.rs
openzt-test-rpc/src/: bin.rs  lib.rs  rpc_hooks.rs  service.rs
openzt/libs/field_accessor_as_string_trait/: Cargo.toml
openzt/resources/include/: infoimg-location.ani
openzt/resources/test/: README_LOADING_ORDER_TESTS.md  README_PATCH_TESTS.md  example-location.toml  extensions.toml  meta_zb.toml  patch.toml
openzt/resources/test/combined/resources/swamp/: N
openzt/resources/test/disabled-ztd-test/: animals.cfg
openzt/resources/test/legacy-attributes-test/: animal.cfg  bldg.cfg  fences.cfg  guests.cfg  items.cfg  staff.cfg  twall.cfg
openzt/resources/test/legacy-attributes-test/ai/: atltank-fence.ai  atltank-wall.ai  elephant.ai  guest.ai  lion.ai  restroom.ai  rock.ai  zookeeper.ai
openzt/resources/test/loading-order-test/: meta.toml
openzt/resources/test/loading-order-test/defs/: 00-habitat-only.toml  01-location-only.toml  02-another-habitat.toml  50-mixed-content.toml  51-second-mixed.toml  98-early-patch.toml  99-patches-only.toml  Capitals-Test.toml
openzt/src/: bfentitytype.rs  bfregistry.rs  binary_parsing.rs  bugfix.rs  capture_ztlog.rs  command_console.rs  detour_testing.rs  dll_dependencies.rs  encoding_utils.rs  expansions.rs  experimental.rs  lib.rs  mods.rs  resource_manager.rs  roofs.rs  runtime_state.rs  scripting.rs  settings.rs  shortcuts.rs  string_registry.rs  testing.rs  util.rs  version.rs  ztadvterrainmgr.rs  ztgamemgr.rs  zthabitatmgr.rs  ztmapview.rs  ztui.rs  ztworldmgr.rs
openzt/src/implementation_tests/: dependency_resolution.rs  mod.rs  patch_rollback.rs
openzt/src/integration_tests/: dependency_resolution.rs  disabled_ztd.rs  extensions.rs  legacy_attributes.rs  loading_order.rs  mod.rs  patch_conditions.rs  patch_rollback.rs  shortcuts.rs
openzt/src/reimplementation_tests/: mod.rs
openzt/src/resource_manager/: bfresourcemgr.rs  commands.rs  dependency_resolver.rs  handlers.rs  hooks.rs  lazyresourcemap.rs  legacy_loading.rs  mod_config.rs  openzt_mods.rs  validation.rs  ztd.rs  ztfile.rs
openzt/src/resource_manager/openzt_mods/: entity_lookup.rs  extensions.rs  habitats_locations.rs  legacy_attributes.rs  loading.rs  patches.rs  ztd_registry.rs
openzt/src/settings/: util.rs
openzt/src/test_rpc/: mod.rs  rpc_hooks.rs
resources/include/: infoimg-habitat.ani  infoimg-location.ani
resources/test/: N  N-noheader  example-combined.toml  example-habitat.toml  example-location.toml  ltb.pal  meta-legacy.toml  meta.toml
resources/test/combined/: meta.toml
resources/test/combined/resources/swamp/: swamp.pal
resources/test/moon-location/: meta.toml
resources/test/moon-location/defs/: location.toml
resources/test/moon-location/resources/moon/: N  moon.pal
src/: animation.rs  bfconfig.rs  bfentity.rs  bfentitytype.rs  bfmap.rs  bfregistry.rs  binary_parsing.rs  bugfix.rs  capture_ztlog.rs  command_console.rs  common.rs  console.rs  custom_expansions.rs  debug.rs  debug_dll.rs  expansions.rs  experimental.rs  lib.rs  load_ini.rs  mods.rs  parsing.rs  resource_manager.rs  scenario_manager.rs  scripting_api.rs  settings.rs  string_registry.rs  util.rs  version.rs  ztadvterrainmgr.rs  ztaimgr.rs  ztgamemgr.rs  zthabitatmgr.rs  ztmapview.rs  ztui.rs  ztworldmgr.rs
src/resource_manager/: bfresourcemgr.rs  commands.rs  handlers.rs  hooks.rs  lazyresourcemap.rs  legacy_loading.rs  mod.rs  openzt_mods.rs  resource_manager.rs  ztd.rs  ztfile.rs
src/resource_manager/openzt_mods/: habitats_locations.rs  loading.rs
src/settings/: ai.rs  debug.rs  util.rs
