[workspace]
members = [
    # core
    "openzt",

    # derive macro
    "field_accessor_as_string",
    "field_accessor_as_string_trait",

    # # ecosystem
    "openzt-loader",
    "openzt-console",
    "openzt-configparser",
    # "openzt-animations",

    # # vendor
    #"vendor/retour-rs",
    "vendor/retour-utils",
    "vendor/retour-utils/impl",
]
exclude = ["outside-workspace"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.87.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/openztcc/openzt"
