[workspace]
members = [
    # core
    "openzt",

    # derive macro
    "field_accessor_as_string",
    "field_accessor_as_string_trait",

    # # ecosystem
    "openzt-loader",
    "openzt-console",
    "openzt-configparser",
    "openzt-test-rpc-dll",
    "openzt-detour-macro",
    "openzt-detour", 
    "openzt-store-macro",
    "openzt-dll",

    # # TODO:	
    # "openzt-animations",
]
#exclude = ["outside-workspace"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/openztcc/openzt"

[profile.dev]
opt-level = 3
[profile.dev.package."*"]
opt-level = 1
