cargo-features = ["edition2024"]
[workspace]
members = [
    # core
    "openzt",

    # derive macro
    "field_accessor_as_string",
    "field_accessor_as_string_trait",
    "openzt-detour-macro",

    # ecosystem
    "openzt-console",
    "openzt-configparser",
    "openzt-test-dll",
    "openzt-detour", 
    "openzt-dll",

    # vendor
    "vendor/retour-rs",

    # # TODO:	
    # "openzt-animations",
]
#exclude = ["outside-workspace"]
resolver = "3"

[workspace.package]
edition = "2021"
rust-version = "1.80.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/openztcc/openzt"

[profile.dev]
opt-level = 3
[profile.dev.package."*"]
opt-level = 1
