[package]
name = "openzt-configparser"
version = "1.1.2"
authors = ["finnhartshorn+bfconfigparser@gmail.com"]
description = "A simple library for parsing and writing configuration files based on INI like file formats used in Zoo Tycoon (2001)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
indexmap = { version = "2.2.6", optional = true }

