[package]
name = "openzt-loader"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# TODO: Vendor this if it doesn't look like it's getting merged
dll-syringe = { git = "https://github.com/fry/dll-syringe", rev = "0a8b18e" }
winapi = {version = "0.3.9", features = ["tlhelp32"]}
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
clap = { version = "4.5.36", features = ["derive"] }
#openzt = { version = "0.1.0-alpha", path = "../openzt", optional = true }
#openzt-rpc = { version = "0.1.0", path = "../openzt-rpc", optional = true }
