[package]
name = "openzt-test-rpc-dll"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
openzt-test-rpc = { path = "../openzt-test-rpc", version = "0.1.0" }

[target.'cfg(windows)'.dependencies]
windows =  { version = "0.61.3", features = ["Win32", "Win32_System_Console", "Win32_System_SystemServices"]}

[lib]
name = "openzttestrpc"
crate-type = ["cdylib"]